src/regression/parse_pool/progtest8.sfp.out

sfc in program: parse_pool/progtest8.sfp
syntax error at 3 at line:
event-condition bar { network = 8192 }
                      ^
