src/regression/parse_pool/progtest8.sfp
# Testing erroneous program definition (invalid source)
configuration foo { nothing nothing }
event-condition bar { network = 8192 }
start hello

